src/objects/Contract_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Account_Elements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is added but not displayed....it&apos;s only used to gain access to the Account object and its fields.</description>
        <label>Account Elements</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Contract__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by trigger that scans contract lines looking at Next Invoice Dates and turning Ready to Invoice to True when Next Invoice Date &lt;= TODAY. By adding this field, closed Contract with no more billing can be turned Inactive and the trigger doesn&apos;t have to scan them.</description>
        <inlineHelpText>Used by trigger that scans contract lines looking at Nxt Inv Dates and turns Ready to Invoice to Y when Next Invoice Date&lt;=TODAY. By adding this field, closed Contract with no more billing can be turned Inactive and the trigger doesn&apos;t have to scan them.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Invoice_Date__c</fullName>
        <label>Base Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Elements__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract_Elements</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Lines (Contract_Elements)</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <description>This date is automatically populated based on the Contract object - Contract End Date</description>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This date is automatically populated based on the Contract object - Contract End Date</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date_do_not_use_2__c</fullName>
        <label>Contract End Date do not use 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <description>This date is automatically populated based on the Contract object - Contract Start Date</description>
        <formula>Contract__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This date is automatically populated based on the Contract object - Contract Start Date</inlineHelpText>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date_do_not_use_2__c</fullName>
        <label>Contract Start Date do  not use 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Invoice_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DNU_Next_Invoice_Date__c</fullName>
        <formula>IF (TEXT( Invoice_Frequency__c )=&apos;Daily&apos;, Date_Last_Invoice_Generated__c +1, 
if( TEXT(Invoice_Frequency__c)=&apos;Monthly&apos;, Date_Last_Invoice_Generated__c +30, 
if( TEXT(Invoice_Frequency__c)=&apos;Quarterly&apos;, Date_Last_Invoice_Generated__c +90, 
if( TEXT(Invoice_Frequency__c)=&apos;Semi-Annually&apos;, Date_Last_Invoice_Generated__c +180, 
if( TEXT(Invoice_Frequency__c)=&apos;Annually&apos;, Date_Last_Invoice_Generated__c +365, 
null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>After invoicing, updates to next invoice date based on frequency</inlineHelpText>
        <label>DNU Next Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Last_Invoice_Generated__c</fullName>
        <inlineHelpText>Auto filled with system date the last invoice generated.  Informational only.</inlineHelpText>
        <label>Date Last Invoice Generated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Invoicing__c</fullName>
        <label>Frequency of Invoicing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Been_Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically turned on when invoice has been generated.   Then automatically turned off awaiting next invoice.</inlineHelpText>
        <label>Has Been Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Schedule_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule Definition lookup name</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Income_Schedule__c</fullName>
        <inlineHelpText>Indicates number of months between billing.  Should be in sync with Invoice Frequency.</inlineHelpText>
        <label>Income Schedule</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Auto generated count of how many invoices have been generated for this line</inlineHelpText>
        <label>Invoice Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Freq__c</fullName>
        <label>Invoice Freq #</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice_Frequency__c</fullName>
        <inlineHelpText>Billing frequency for this line</inlineHelpText>
        <label>Invoice Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>2 Year (Single Payment)</fullName>
                </value>
                <value>
                    <fullName>3 Year (Single Payment)</fullName>
                </value>
                <value>
                    <fullName>1 Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_has_been_created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice has been created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Invoice_Date__c</fullName>
        <label>Last Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Count__c</fullName>
        <label>Max Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Invoice_Date__c</fullName>
        <label>Next Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ready_to_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically flagged when a contract line reaches it&apos;s Next Invoice date</inlineHelpText>
        <label>Ready to Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ready_to_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Process?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Invoices__c</fullName>
        <formula>Total_number_invoices__c - Invoice_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of future invoices still to generate for this line</inlineHelpText>
        <label>Remaining Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to line item on last invoice generated for this contract line</inlineHelpText>
        <label>Sales Invoice Line</label>
        <referenceTo>c2g__codaInvoiceLineItem__c</referenceTo>
        <relationshipLabel>Contract Lines</relationshipLabel>
        <relationshipName>Contract_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Invoice_Number__c</fullName>
        <formula>Sales_Invoice_Line__r.c2g__Invoice__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Last invoice number generated for this line</inlineHelpText>
        <label>Sales Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_number_invoices__c</fullName>
        <inlineHelpText>Total number of invoices that will generate over life of line</inlineHelpText>
        <label>Total # Invoices</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Lines</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Next_Invoice_Date__c</columns>
        <columns>Invoice_Count__c</columns>
        <columns>Remaining_Invoices__c</columns>
        <columns>Ready_to_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>False_Date_Audit</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Next_Invoice_Date__c</columns>
        <columns>Invoice_Count__c</columns>
        <columns>Remaining_Invoices__c</columns>
        <columns>Ready_to_Invoice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ready_to_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Remaining_Invoices__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Ready to Invoice</label>
    </listViews>
    <listViews>
        <fullName>False_Date_Audit1</fullName>
        <columns>NAME</columns>
        <columns>Contract__c</columns>
        <columns>Next_Invoice_Date__c</columns>
        <columns>Invoice_Count__c</columns>
        <columns>Remaining_Invoices__c</columns>
        <columns>Ready_to_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Remaining_Invoices__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Next_Invoice_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>False Date Audit</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>Contract Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>